--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.18.7",
     "npm": "^5.6.0",
     "path": "^0.12.7",
+    "redux-thunk": "^2.3.0",
     "request": "^2.81.0"
   },
   "engines": {
