--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -2,6 +2,9 @@
     "parser": "babel-eslint",
     "extends": "airbnb",
     "rules": {
-        "indent": ["error", 4]
+        "indent": ["error", 4],
+        "quotes": ["error", "double", "avoid-escape"],
+        "react/jsx-filename-extension": 0,
+        "react/jsx-indent": ["error", 4 ]
     }
 }
