--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,9 +1,19 @@
 {
     "parser": "babel-eslint",
     "extends": "airbnb",
+    "env": {
+        "browser": true
+    },
     "rules": {
-        "indent": ["error", 4],
+        "indent": ["error", 4, {
+            "SwitchCase": 1
+        }],
         "quotes": ["error", "double", "avoid-escape"],
+        "comma-dangle": ["error", {
+            "objects": "always-multiline", 
+            "functions": "ignore"
+        }],
+        "import/prefer-default-export": 0,
         "react/jsx-filename-extension": 0,
         "react/jsx-indent": ["error", 4 ]
     }
