--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -10,15 +10,16 @@
         }],
         "quotes": ["error", "double", "avoid-escape"],
         "comma-dangle": ["error", {
-            "objects": "always-multiline", 
+            "objects": "always-multiline",
             "functions": "ignore"
         }],
         "import/prefer-default-export": 0,
         "react/jsx-filename-extension": 0,
-        "react/jsx-indent": ["error", 4 ], 
+        "react/jsx-indent": ["error", 4 ],
         "react/jsx-indent-props": ["error", 4],
         "jsx-a11y/click-events-have-key-events": 0,
         "jsx-a11y/interactive-supports-focus": 0,
-        "react/require-default-props": 0  
+        "react/require-default-props": 0,
+        "no-bitwise": "off"
     }
 }
