--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -13,6 +13,7 @@
             "objects": "always-multiline", 
             "functions": "ignore"
         }],
+        "no-unused-vars": ["error", {"args": "none"}],
         "import/prefer-default-export": 0,
         "react/jsx-filename-extension": 0,
         "react/jsx-indent": ["error", 4 ],
