--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -21,6 +21,7 @@
         "jsx-a11y/click-events-have-key-events": 0,
         "jsx-a11y/interactive-supports-focus": 0,
         "react/require-default-props": 0,
+        "react/jsx-boolean-value": 0,
         "no-bitwise": "off"
     }
 }
